--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </h3>
 
     <img src="./img/WhatsApp Image 2025-07-03 at 09.11.00.jpeg" alt="jogo-vasco">
-    <h3>Aqui eu já sabia que te amava, mesmo sendo contra, você assistiu um jogo do meu time comigo e ainda vestiu a camisa,
+    <h3>Aqui eu já sabia que te amava. Mesmo você sendo contra, você assistiu um jogo do meu time comigo e ainda vestiu a camisa,
         pra mim foi um dos melhores dias da minha vida, mesmo o vasco tendo perdido de 2x0 pro flamengo. Estar com você vale mais
         do que qualquer vitória ou título, aqui você já era meu amor maior, obrigado por esse dia.
     </h3>
